RESOLVED FIXED40034
WebFrame::paintDocumentRectToContextAtPoint doesn't paint scrollbars
https://bugs.webkit.org/show_bug.cgi?id=40034
Summary WebFrame::paintDocumentRectToContextAtPoint doesn't paint scrollbars
Alice Liu
Reported 2010-06-01 17:58:52 PDT
WebFrame::paintDocumentRectToContextAtPoint doesn't paint scrollbars, and I think it should. Otherwise calling this function with a region the same size as the webview will result in a blank unpainted space where the scrollbars would have been. <rdar://problem/7799848>
Attachments
patch (1.31 KB, patch)
2010-06-04 14:53 PDT, Alice Liu
no flags
patch that also renames (5.41 KB, patch)
2010-06-04 15:50 PDT, Alice Liu
jhoneycutt: review+
Alice Liu
Comment 1 2010-06-04 14:53:02 PDT
Alice Liu
Comment 2 2010-06-04 15:50:21 PDT
Created attachment 57923 [details] patch that also renames
Jon Honeycutt
Comment 3 2010-06-04 16:55:44 PDT
Comment on attachment 57923 [details] patch that also renames r=me
Alice Liu
Comment 4 2010-06-04 17:11:19 PDT
Note You need to log in before you can comment on or make changes to this bug.