WebFrame::paintDocumentRectToContextAtPoint doesn't paint scrollbars https://bugs.webkit.org/show_bug.cgi?id=40034 <rdar://problem/7799848>

Reviewed by Jon Honeycutt.

* WebFrame.cpp:
(WebFrame::paintScrollViewRectToContextAtPoint): Renamed from paintDocumentRectToContextAtPoint.
Call paint() instead of paintContents(). Also move the dirtyRect to counteract the moving that happens in paint().

Just renaming changes:
* Interfaces/IWebFramePrivate.idl:
* Interfaces/IWebViewPrivate.idl:
* WebFrame.h:
* WebView.cpp:
(WebView::paintScrollViewRectToContextAtPoint):
* WebView.h:

* Interfaces/WebKit.idl: Touched for rebuild.



Canonical link: https://commits.webkit.org/51745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60722 268f45cc-cd09-0410-ab3c-d52691b4dbfc