WebKit/win/WebFrame.h
@@ -245,7 +245,7 @@ public:
         /* [in] */ RECT rect,
         /* [in] */ OLE_HANDLE deviceContext);
 
-    virtual HRESULT STDMETHODCALLTYPE paintDocumentRectToContextAtPoint(
+    virtual HRESULT STDMETHODCALLTYPE paintScrollViewRectToContextAtPoint(
         /* [in] */ RECT rect,
         /* [in] */ POINT pt,
         /* [in] */ OLE_HANDLE deviceContext);
