WebKit/win/WebView.cpp
@@ -5676,7 +5676,7 @@ HRESULT STDMETHODCALLTYPE WebView::paintDocumentRectToContext(
     return m_mainFrame->paintDocumentRectToContext(rect, deviceContext);
 }
 
-HRESULT STDMETHODCALLTYPE WebView::paintDocumentRectToContextAtPoint(
+HRESULT STDMETHODCALLTYPE WebView::paintScrollViewRectToContextAtPoint(
     /* [in] */ RECT rect,
     /* [in] */ POINT pt,
     /* [in] */ OLE_HANDLE deviceContext)
@@ -5687,7 +5687,7 @@ HRESULT STDMETHODCALLTYPE WebView::paintDocumentRectToContextAtPoint(
     if (!m_mainFrame)
         return E_FAIL;
 
-    return m_mainFrame->paintDocumentRectToContextAtPoint(rect, pt, deviceContext);
+    return m_mainFrame->paintScrollViewRectToContextAtPoint(rect, pt, deviceContext);
 }
 
 HRESULT STDMETHODCALLTYPE WebView::reportException(
